<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddressActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/txt_receiver_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/search_edittext_background"
                android:gravity="start|center_vertical"
                android:hint="@string/receiver_name"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/txt_receiver_lastname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/search_edittext_background"
                android:gravity="start|center_vertical"
                android:hint="@string/receiver_lastname"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/txt_address"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/search_edittext_background"
                android:gravity="start"
                android:hint="@string/receiver_address"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/txt_postal_code"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/search_edittext_background"
                android:gravity="start|center_vertical"
                android:hint="@string/postal_code"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="right"
                android:text="@string/location_on_map"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <org.neshan.mapsdk.MapView
                android:id="@+id/mapview"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="10dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_complete_order"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/green_button_bg"
                android:text="@string/complete_order"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="10dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>